# MomCart

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: seed_pantry.py  test_voice.py
src/: agent.py  bot.py  config.py  memory.py  notion_tools.py  pantry_seed.py  prompts.py  stt.py
